--- a/frontend/src/assets/variables.css
+++ b/frontend/src/assets/variables.css
@@ -138,3 +138,10 @@
 }
 
 
+/* ----------- Z indexes ----------- */
+:root {
+    --z-modal: 2000;
+    --z-nav: 1000;
+}
+
+
